# my-little-video-app

./: CMakeLists.txt  README.md
lib/ffmpeg/: CMakeLists.txt
src/: load_frame.cpp  main.cpp  video_reader.cpp  video_reader.hpp
